@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="Managed server" style="swimlane" vertex="1" parent="1"><mxGeometry x="20" y="30" width="340" height="130" as="geometry"/></mxCell><mxCell id="5" value="puppet&#xa;(daemon)" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="190" y="30" width="140" height="60" as="geometry"/></mxCell><mxCell id="15" value="puppet&#xa;(cli)" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="10" y="50" width="140" height="60" as="geometry"/></mxCell><mxCell id="3" value="Puppet master server" style="swimlane" vertex="1" parent="1"><mxGeometry x="380" y="30" width="430" height="140" as="geometry"/></mxCell><mxCell id="4" value="puppetmaster" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="3"><mxGeometry x="10" y="30" width="140" height="60" as="geometry"/></mxCell><mxCell id="13" value="puppetca" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="3"><mxGeometry x="280" y="50" width="140" height="60" as="geometry"/></mxCell><mxCell id="18" value="Certificate store" style="shape=folder" vertex="1" parent="3"><mxGeometry x="170" y="46.5" width="90" height="67" as="geometry"/></mxCell><mxCell id="19" value="" style="endArrow=none" edge="1" parent="3" source="4" target="18"><mxGeometry as="geometry"/></mxCell><mxCell id="20" value="" style="endArrow=none" edge="1" parent="3" source="18" target="13"><mxGeometry as="geometry"/></mxCell><mxCell id="7" value="sysadmin" style="shape=actor;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="170" y="270" width="40" height="60" as="geometry"/></mxCell><mxCell id="8" value="puppet&#xa;admin" style="shape=actor;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="410" y="270" width="40" height="60" as="geometry"/></mxCell><mxCell id="9" value="SSH" style="endArrow=none;dashed=1" edge="1" parent="1" source="8" target="3"><mxGeometry as="geometry"/></mxCell><mxCell id="11" value="SSH" style="endArrow=none;dashed=1" edge="1" parent="1" source="7" target="2"><mxGeometry as="geometry"/></mxCell><mxCell id="14" value="Handle certificate administration" style="endArrow=none;edgeStyle=segmentEdgeStyle" edge="1" parent="1" source="8" target="13"><mxGeometry as="geometry"><mxPoint x="95" y="90" as="offset"/></mxGeometry></mxCell><mxCell id="16" value="Request/retrieve certificate" style="endArrow=none;edgeStyle=segmentEdgeStyle" edge="1" parent="1" source="7" target="15"><mxGeometry as="geometry"><mxPoint x="-55" y="90" as="offset"/></mxGeometry></mxCell><mxCell id="17" value="" style="endArrow=classic;edgeStyle=orthogonalEdgeStyle;endFill=1;exitX=0.75;exitY=1" edge="1" parent="1" source="15" target="4"><mxGeometry as="geometry"><Array as="points"><mxPoint x="135" y="150"/><mxPoint x="460" y="150"/></Array></mxGeometry></mxCell></root></mxGraphModel>
