@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="Managed server" style="swimlane" vertex="1" parent="1"><mxGeometry x="20" y="20" width="230" height="230" as="geometry"/></mxCell><mxCell id="4" value="puppet" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="80" y="30" width="140" height="60" as="geometry"/></mxCell><mxCell id="3" value="Puppet master server" style="swimlane" vertex="1" parent="1"><mxGeometry x="310" y="20" width="410" height="300" as="geometry"/></mxCell><mxCell id="5" value="puppetmaster" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="3"><mxGeometry x="10" y="30" width="140" height="60" as="geometry"/></mxCell><mxCell id="6" value="SSL keys and certificates" style="shape=folder" vertex="1" parent="3"><mxGeometry x="220" y="30" width="120" height="80" as="geometry"/></mxCell><mxCell id="7" value="Configuration repository" style="shape=folder" vertex="1" parent="3"><mxGeometry x="220" y="130" width="120" height="80" as="geometry"/></mxCell><mxCell id="13" value="Config Updates" style="shape=mxgraph.flowchart.transfer;fillColor=#ffffff;strokeColor=#000000;strokeWidth=2;direction=north;verticalAlign=top;verticalLabelPosition=bottom" vertex="1" parent="1"><mxGeometry x="555.75" y="340" width="68.5" height="90" as="geometry"/></mxCell><mxCell id="14" value="" style="endArrow=none" edge="1" parent="1" source="13" target="7"><mxGeometry as="geometry"/></mxCell></root></mxGraphModel>
