@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="Managed server" style="swimlane" vertex="1" parent="1"><mxGeometry x="30" y="20" width="200" height="150" as="geometry"/></mxCell><mxCell id="4" value="puppet" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="30" y="50" width="140" height="60" as="geometry"/></mxCell><mxCell id="3" value="Puppet master server" style="swimlane" vertex="1" parent="1"><mxGeometry x="510" y="20" width="300" height="270" as="geometry"/></mxCell><mxCell id="7" value="puppet master" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="3"><mxGeometry x="30" y="50" width="140" height="60" as="geometry"/></mxCell><mxCell id="15" value="Config repository" style="shape=folder" vertex="1" parent="3"><mxGeometry x="160" y="190" width="120" height="65" as="geometry"/></mxCell><mxCell id="16" value="consult" style="endArrow=none" edge="1" parent="3" source="7" target="15"><mxGeometry as="geometry"><mxPoint x="21.052631578947512" as="offset"/></mxGeometry></mxCell><mxCell id="8" value="Get info on facts that master needs" style="endArrow=classic;edgeStyle=orthogonalEdgeStyle;entryX=0;entryY=0.25;exitX=1;exitY=0.25;endFill=1" edge="1" parent="1" source="4" target="7"><mxGeometry as="geometry"><Array as="points"><mxPoint x="220" y="85"/><mxPoint x="220" y="30"/><mxPoint x="520" y="30"/><mxPoint x="520" y="85"/></Array><mxPoint x="10" y="-37.5" as="offset"/></mxGeometry></mxCell><mxCell id="9" value="Send facts" style="endArrow=classic;endFill=1" edge="1" parent="1" source="4" target="7"><mxGeometry as="geometry"><mxPoint y="-10.5" as="offset"/></mxGeometry></mxCell><mxCell id="11" value="Send (compiled) catalog" style="endArrow=classic;exitX=0;exitY=0.75;entryX=1;entryY=0.75;endFill=1" edge="1" parent="1" source="7" target="4"><mxGeometry as="geometry"><mxPoint y="14.5" as="offset"/></mxGeometry></mxCell><mxCell id="12" value="Report" style="endArrow=classic;entryX=0.25;entryY=1;exitX=1;exitY=0.75;edgeStyle=orthogonalEdgeStyle;endFill=1;elbow=vertical" edge="1" parent="1" source="4" target="7"><mxGeometry as="geometry"><Array as="points"><mxPoint x="200" y="150"/><mxPoint x="575" y="150"/></Array><mxPoint x="2.5" y="42.5" as="offset"/></mxGeometry></mxCell></root></mxGraphModel>
